--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "jest":{
+    "resetMocks": false
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
